# terraforge

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  ordofops.md
.github/workflows/: ci.yml
docs/: design.md
mapgen_presets/: analysis_batch.json  example_batch.json  sample_batch.json
src/: biomes.rs  coast.rs  colors.rs  config.rs  elevation.rs  grid_ops.rs  land_mask.rs  landscape_evolution.rs  lib.rs  oceans.rs  plates.rs  preview.rs  priors.rs  progress.rs  rainfall.rs  rivers.rs  temperature.rs  units.rs  water.rs  world.rs
src/gui/: app.rs  mod.rs  params.rs  preview.rs  sampling.rs  worker.rs
