[package]
name = "terraforge"
version = "0.1.0"
edition = "2021"
description = "Deterministic procedural 2D world map generation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jmrfox/terraforge"

[[bin]]
name = "mapgen"
path = "src/bin/mapgen.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_chacha = "0.3"
noise = "0.9"
rayon = "1.10"
image = { version = "0.25", default-features = false, features = ["png"] }
clap = { version = "4", features = ["derive"] }
